# Open3D

./: .travis.yml  CMakeLists.txt
.github/workflows/: macos.yml  openblas.yml  ubuntu.yml
cpp/benchmarks/geometry/: KDTreeFlann.cpp
cpp/benchmarks/io/: PointCloudIO.cpp
cpp/open3d/core/: AdvancedIndexing.cpp  AdvancedIndexing.h  CMakeLists.txt  CUDAState.cuh  CUDAUtils.h  Device.h  Dispatch.h  Dtype.cpp  Dtype.h  EigenAdaptor.h  Indexer.cpp  Indexer.h  MemoryManager.cpp  MemoryManagerCPU.cpp  MemoryManagerCUDA.cu  ShapeUtil.cpp  SizeVector.h  Tensor.cpp  Tensor.h  TensorKey.h  TensorList.cpp  TensorList.h
cpp/open3d/core/kernel/: BinaryEW.cpp  BinaryEWCPU.cpp  BinaryEWCUDA.cu  CPULauncher.h  IndexGetSet.cpp  NonZero.cpp  Reduction.cpp  ReductionCPU.cpp  ReductionCUDA.cu  UnaryEW.cpp  UnaryEWCPU.cpp  UnaryEWCUDA.cu
cpp/open3d/geometry/: BoundingVolume.cpp  EstimateNormals.cpp  HalfEdgeTriangleMesh.cpp  Image.cpp  Image.h  ImageFactory.cpp  Octree.cpp  PointCloud.cpp  PointCloudFactory.cpp  PointCloudSegmentation.cpp  Qhull.cpp  RGBDImageFactory.cpp  SurfaceReconstructionAlphaShape.cpp  SurfaceReconstructionBallPivoting.cpp  SurfaceReconstructionPoisson.cpp  TetraMesh.cpp  TetraMeshFactory.cpp  TriangleMesh.cpp  TriangleMeshDeformation.cpp  TriangleMeshFactory.cpp  TriangleMeshSimplification.cpp  VoxelGrid.cpp  VoxelGridFactory.cpp
cpp/open3d/io/sensor/azure_kinect/: AzureKinectRecorder.cpp  AzureKinectSensor.cpp  AzureKinectSensorConfig.cpp  K4aPlugin.cpp  MKVReader.cpp
cpp/open3d/ml/contrib/: GridSubsampling.cpp
cpp/open3d/pipelines/integration/: ScalableTSDFVolume.cpp  ScalableTSDFVolume.h  UniformTSDFVolume.cpp
cpp/open3d/pipelines/odometry/: Odometry.cpp
cpp/open3d/pipelines/registration/: Feature.cpp  Registration.cpp
cpp/open3d/t/geometry/: TensorMap.h
cpp/open3d/tgeometry/: CMakeLists.txt
cpp/open3d/utility/: Console.h  FileSystem.cpp
cpp/open3d/visualization/gui/: FileDialog.cpp  Task.cpp
cpp/open3d/visualization/rendering/filament/: FilamentRenderer.cpp  FilamentResourceManager.cpp
cpp/open3d/visualization/visualizer/: GuiVisualizer.cpp  Visualizer.cpp  VisualizerRender.cpp
cpp/pybind/: pybind_utils.cpp
cpp/pybind/core/: size_vector.cpp  tensor.cpp
cpp/pybind/ml/contrib/: contrib_subsample.cpp
cpp/pybind/pipelines/integration/: integration.cpp
cpp/tests/test_utility/: Sort.h
cpp/tests/utility/: Console.cpp  FileSystem.cpp
cpp/tools/: GLInfo.cpp
examples/cpp/: AzureKinectMKVReader.cpp  Log.cpp  PointCloud.cpp
python/test/ml/: test_contrib_subsample.py
src/Open3D/Core/: CUDAUtils.h
src/Open3D/Core/Hashmap/: TemplateHashmap.h
src/Open3D/GUI/: CMakeLists.txt
src/Open3D/GUI/Materials/showcase/: lantern.mat  plane.mat  sphere.mat  transparent.mat
src/Open3D/GUI/Resources/showcase/: ibl.ktx  sky.ktx  sources.txt
src/Open3D/ML/TensorFlow/: CMakeLists.txt
src/Open3D/TGeometry/: CMakeLists.txt  PointCloud.cpp  TestTPointCloud.cpp
src/Open3D/Visualization/Visualizer/: GuiVisualizer.cpp
src/Pybind/: CMakeLists.txt
util/scripts/: check_cpp_style.py  check_style.py
